--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>AdvancedChat</groupId>
   <artifactId>AdvancedChat</artifactId>
+  <version>1.3.2-SNAPSHOT</version>
+  <packaging>pom</packaging>
   
   <repositories>
 	<repository>
@@ -27,26 +29,7 @@
     	<scope>provided</scope>
     </dependency>
   </dependencies>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <resources>
-      <resource>
-        <directory>src</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <version>1.4.0</version>
+  <modules>
+  	<module>1_16_R2</module>
+  </modules>
 </project>
