--- a/ChatUtils116/pom.xml
+++ b/ChatUtils116/pom.xml
@@ -1,36 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>AdvancedChat</groupId>
-  <artifactId>AdvancedChat</artifactId>
-  <version>1.3.2-SNAPSHOT</version>
-  <packaging>pom</packaging>
   
   <repositories>
-	<repository>
-		<id>placeholderapi</id>
-        <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
-	</repository>
 	<repository>
        	<id>spigot-repo</id>
         <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
     </repository>
   </repositories>
   <dependencies>
-	<dependency>
-		<groupId>me.clip</groupId>
-		<artifactId>placeholderapi</artifactId>
-		<version>2.10.9</version>
-        <scope>provided</scope>
-	</dependency>
     <dependency>
     	<groupId>org.spigotmc</groupId>
     	<artifactId>spigot-api</artifactId>
-    	<version>1.8.8-R0.1-SNAPSHOT</version>
+    	<version>1.16.3-R0.1-SNAPSHOT</version>
     	<scope>provided</scope>
     </dependency>
-  </dependencies>
-
-  <modules>
-  	<module>ChatUtils116</module>
-  </modules>
+  </dependencies>  
+  <parent>
+    <groupId>AdvancedChat</groupId>
+    <artifactId>AdvancedChat</artifactId>
+    <version>1.3.2-SNAPSHOT</version>
+  </parent>
+  <artifactId>ChatUtils116</artifactId>
 </project>
