--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
   <dependencies>
 	<dependency>
 		<groupId>me.clip</groupId>
@@ -45,7 +46,32 @@
 		<resource>
 			<directory>src/main/resources</directory>
 			<filtering>true</filtering>
+			<includes>
+			  <include>plugin.yml</include>
+			</includes>
 		</resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <!-- Keep filtering at false for other resources to prevent bad magic -->
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                    <exclude>plugin.yml</exclude>
+                </excludes>
+            </resource>
   	</resources>
+  	
+  	<plugins>
+  	  <plugin>
+  		<groupId>org.apache.maven.plugins</groupId>
+  		<artifactId>maven-compiler-plugin</artifactId>
+  		<version>3.8.1</version>
+  		<configuration>
+  		  <source>1.8</source>
+  		  <target>1.8</target>
+  		</configuration>
+  	  </plugin>
+  	</plugins>
   </build>
+  <packaging>maven-plugin</packaging>
 </project>
