--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -128,7 +128,6 @@ Filter-Chat:
     - 'stupid'
     - 'fuck'
 #
-#
 # |Translation of messages from AdvancedChat|
 # |Version: 1.4|
 #
@@ -148,8 +147,9 @@ AdvancedChat:
     - '&5> &b/AdvancedChat &6reload &7reload the plugin files'
     - '&5> &b/AdvancedChat &6info &7shows information about the plugin' 
   Mute-Player: '&e[&b<name>&e] &cis now muted!'
-  Un-Mute-Player: '&e[&b<name>&e] &ais now unmuted!'
+  UnMute-Player: '&e[&b<name>&e] &ais now unmuted!'
   Alert-Mute: '&e[!] &cright now you are muted'
+  No-Online-Player: ''
 #
 # This is the end of the configuration ... [-_-] more things coming soon
 # 
