--- a/color-gui.yml
+++ b/color-gui.yml
@@ -13,12 +13,11 @@ Decoration:
   Back:
     Item:  ''
     Legacy-Item: ''
-    Use-Custom-Comand: false
-    Command: 'menu'
 Items:
   Dark_Red:
     Name: '&4&lDark Red'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -28,6 +27,7 @@ Items:
   Red:
     Name: '&c&lRed'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -37,6 +37,7 @@ Items:
   Dark_Blue:
     Name: '&1&lDark Blue'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -46,6 +47,7 @@ Items:
   Blue:
     Name: '&9&lBlue'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -55,6 +57,7 @@ Items:
   Dark_Green:
     Name: '&2&lDark Green'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -64,6 +67,7 @@ Items:
   Green:
     Name: '&a&lGreen'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -73,6 +77,7 @@ Items:
   Yellow:
     Name: '&e&lYellow'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -82,6 +87,7 @@ Items:
   Gold:
     Name: '&6&lGold'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -91,6 +97,7 @@ Items:
   Dark_Aqua:
     Name: '&3&lDark Aqua'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -100,6 +107,7 @@ Items:
   Aqua:
     Name: '&b&lAqua'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -109,6 +117,7 @@ Items:
   Light_Purple:
     Name: '&d&lLight Purple'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -118,6 +127,7 @@ Items:
   Dark_Purple:
     Name: '&5&lDark Purple'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -127,6 +137,7 @@ Items:
   White:
     Name: '&f&lWhite'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -136,6 +147,7 @@ Items:
   Gray:
     Name: '&7&lGray'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -145,6 +157,7 @@ Items:
   Dark_Gray:
     Name: '&8&lDark Gray'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
@@ -154,6 +167,7 @@ Items:
   Black:
     Name: '&0&lBlack'
     Use-Custom-Skull: true
+    Slot: 
     Texture: ''
     ID: ''
     Item: ''
