--- a/config.yml
+++ b/config.yml
@@ -132,9 +132,8 @@ Filter-Chat:
 # |Version: 1.4|
 #
 AdvancedChat:
-  ClearChat:
-    Server: '&7The chat has been cleaned'
-    Player: '&7The chat has been cleaned by &b[&e<name>&b]'
+  ClearChat-Server: '&7The chat has been cleaned'
+  ClearChat-Player: '&7The chat has been cleaned by &b[&e<name>&b]'
   No-Permission: '&cYou dont have permission to do that!'
   No-Permission-Label: 'Ask the server owner or an administrator for help for more information.'
   Error-Args: '&cUnknown Arguments'
