--- a/config.yml
+++ b/config.yml
@@ -6,11 +6,14 @@
 # |Type| the types are the modes that exist according to the function they can be different or the same these are all the types that exist 
 # [Default | Custom | Group ]  , this options only works on certain options not all [Normal |Experimental]
 #
-Config:
-  Update:
-    Enabled: true #allows to send an update message available on the console [ Default| true ]
-    Lang: en #[ en | es ] there are 2 languages available at the moment [English|Spanish]
-    Notify: true #allows to send an update message available on the player [ Default| true ]
+# ||> Remove
+#config:
+#  Update:
+#    Enabled: true #allows to send an update message available on the console [ Default| true ]
+#    Lang: en #[ en | es ] there are 2 languages available at the moment [English|Spanish]
+#    Notify: true #allows to send an update message available on the player [ Default| true ]
+#
+# ||==================>
 #
 # |Use default prefix|
 # if it is true it will use the prefix of the plugin itself, but if it is false it will use the prefix that you define in [Prefix: 'my server']
@@ -51,30 +54,7 @@ Custom-Format:
   HoverEvent:
     Text: '&ahello &d<name>'
     Mode: Text
-#
-# |World Chat|
-# |A chat system that can separate the chat by regions or worlds as needed or you can also let the chat be global
-# |
-# World-Chat:
-#  Enabled: true
-#  World-List:
-#    <world name>:
-#      Type: Global
-#      Range: 15
-#
-# [World-List] here you will find the worlds that will use the chat function [Local]  serves to limit the chat to a range of players according to the distance that is defined. This option depends on the [Range] | [Global] will allow all players to talk to each other
-# [World Name] Here will be the name of the world in which the function can be activated but it is important that the world exists or that the name is not incorrect
-# [Type] There are only two existing types which are [Local] | [Global]
-# [Local]  serves to limit the chat to a range of players according to the distance that is defined. This option depends on the [Range]
-# [Global] will allow all players to talk to each other
-# [Range] here you can define the distance between each player that could receive the message from another [this option only works with the type | local]
-#
-World-Chat:
-  Enabled: true
-  World-List:
-    World:
-      Type: Global
-      Range: 15
+
 #
 # | Groups |
 # | here you can customize the chat of different groups or ranks in a more specific way |
@@ -123,7 +103,7 @@ Groups:
 # [Use-Custom-Msg] will use a custom message found in the [Message] section instead of using [Form Of Censorship] [Default | false]
 # [Message] here you can define a personalized message that will be sent to the player
 # [Form-Of-Censorship] this is the format that the word will be censored, for example [noob = ****] this will depend on the number of characters that the word has
-# [Delay] It is the waiting time that the message will have before it is sent so that spam does not form in the player's chat [Defalt | 100 ]
+# |Not implement| [Delay] It is the waiting time that the message will have before it is sent so that spam does not form in the player's chat [Defalt | 100 ]
 #
 # |The format is very simple, you just have to add the word you want to censor to the list
 #  Words:
@@ -136,11 +116,12 @@ Filter-Chat:
   Use-Custom-Msg: false
   Message: 'you cannot use this word, it is blocked!'
   Form-Of-Censorship: '*'
-  Delay: 5
+#  Delay: 5
   BadWords:
     - 'noob'
     - 'stupid'
     - 'fuck'
+    - 'pt'
 #
 # |Translation of messages from AdvancedChat|
 # |Version: 1.4|
@@ -151,7 +132,6 @@ AdvancedChat:
   No-Permission: '&cYou dont have permission to do that!'
   No-Permission-Label: 'Ask the server owner or an administrator for help for more information.'
   Error-Args: '&cUnknown Arguments'
-  Error-Console: '&cYou cannot use this command in the console'
   Reload: '&aReload Completed'
   Help-Mute: '&7Use &b/Mute &e<player> &7'
   Help-UnMute: '&7Use &b/UnMute &e<player> &7'
@@ -160,7 +140,10 @@ AdvancedChat:
     - '&5> &b/AdvancedChat &8| &9/Ac &7these are the variants of the main plugin command'
     - '&5> &b/AdvancedChat &6help &7show this same message'
     - '&5> &b/AdvancedChat &6reload &7reload the plugin files'
-    - '&5> &b/AdvancedChat &6info &7shows information about the plugin' 
+    - '&5> &b/AdvancedChat &6info &7shows information about the plugin'
+    - '&5> &b/AdvancedChat &6color &7 open color gui'
+    - '&5> &b/AdvancedChat &6player &e<player name>'
+    - '&5> &b/AdvancedChat &6players'
   Mute-Player: '&e[&b<name>&e] &cis now muted!'
   UnMute-Player: '&e[&b<name>&e] &ais now unmuted!'
   Alert-Mute: '&e[!] &cright now you are muted'
