--- a/custom-command.yml
+++ b/custom-command.yml
@@ -5,6 +5,8 @@
 #
 Commands:
   Example-Help:
+    Use-Delay: false    
+    Delay: 5s
     Command: '/Help'
     Permission: 'my.permisson.help'
     Permission-Message:
