--- a/config.yml
+++ b/config.yml
@@ -16,7 +16,7 @@
 #   [AutoClear] you can activate the automatic cleaning of the chat according to the number of ticks [Default | true]
 #   [Ticks] here you can define the time that the actions are automatically executed [Default | 24000], 24000 tick = 20 min
 Settings:
-  Use-DataBase: false
+  Use-Database: false
   Update: true
   Use-Default-Prefix: true
   Prefix: '&6[&bMy Server&6]&7'
