--- a/bungee-config.yml
+++ b/bungee-config.yml
@@ -6,7 +6,7 @@
 #
 # |Default-Channel|
 #
-# Types: [ALL] [Local] 
+# Types: [ALL] [Local] [Group] comming soon more options
 #
 Default-Channel: ALL
 #
